//// Docs: https://dbml.dbdiagram.io/docs
//// -- SIBA Database Schema

// ============ ENUMS ============

Enum TipoEmpleado {
  TECNICO
  ADMINISTRATIVO
  GERENTE
}

Enum TipoContratacion {
  CONTRATO_MARCO
}

// ============ SEGURIDAD ============

Table usuarios {
  id int [pk, increment]
  email text [unique, not null]
  clave_hash text [not null]
  nombre text [not null]
  apellido text [not null]
  ultimo_acceso timestamp
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_actualizacion timestamp [not null]
  fecha_eliminacion timestamp
}

Table roles {
  id int [pk, increment]
  nombre text [unique, not null]
  descripcion text
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_eliminacion timestamp
}

Table permisos {
  id int [pk, increment]
  codigo text [unique, not null]
  descripcion text
  modulo text [not null]
}

Table usuario_roles {
  id int [pk, increment]
  usuario_id int [not null]
  rol_id int [not null]
  fecha_asignacion timestamp [default: `now()`, not null]

  Indexes {
    (usuario_id, rol_id) [unique]
  }
}

Table rol_permisos {
  id int [pk, increment]
  rol_id int [not null]
  permiso_id int [not null]

  Indexes {
    (rol_id, permiso_id) [unique]
  }
}

// ============ MAESTROS ============

Table clientes {
  id int [pk, increment]
  codigo int [unique, not null]
  razon_social text [not null]
  cuit text [unique]
  telefono text
  email text
  direccion_fiscal text
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_actualizacion timestamp [not null]
  fecha_eliminacion timestamp
}

Table zonas {
  id int [pk, increment]
  codigo int [unique, increment, not null]
  nombre text [unique, not null]
  descripcion text
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_eliminacion timestamp
}

Table sucursales {
  id int [pk, increment]
  codigo_interno int [unique, increment, not null]
  codigo_externo text
  cliente_id int [not null]
  zona_id int [not null]
  nombre text [not null]
  direccion text [not null]
  telefono text
  contacto_nombre text
  contacto_telefono text
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_actualizacion timestamp [not null]
  fecha_eliminacion timestamp
}

Table vehiculos {
  id int [pk, increment]
  codigo_interno int [unique, increment, not null]
  zona_id int
  patente text [unique, not null]
  marca text
  modelo text
  anio int
  tipo text
  kilometros int
  estado text [default: 'ACTIVO', not null]
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_actualizacion timestamp [not null]
  fecha_eliminacion timestamp
}

Table materiales {
  id int [pk, increment]
  codigo_interno int [unique, increment, not null]
  codigo_articulo text [unique, not null]
  nombre text [not null]
  descripcion text
  presentacion text [not null]
  unidad_medida text [not null]
  categoria text
  stock_minimo double [default: 0]
  precio_costo decimal(10,2) [default: 0, not null]
  porcentaje_rentabilidad double [default: 0, not null]
  precio_venta decimal(10,2) [default: 0, not null]
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_actualizacion timestamp [not null]
  fecha_eliminacion timestamp
}

Table historial_precios {
  id int [pk, increment]
  material_id int [not null]
  precio_costo decimal(10,2) [not null]
  precio_venta decimal(10,2) [not null]
  porcentaje_rentabilidad double [not null]
  fecha_cambio timestamp [default: `now()`, not null]
}

Table empleados {
  id int [pk, increment]
  nombre text [not null]
  apellido text [not null]
  email text [unique]
  direccion text
  telefono text
  inicio_relacion_laboral timestamp [not null]
  tipo TipoEmpleado [not null]
  contratacion TipoContratacion [not null]
  zona_id int
  usuario_id int [unique]
  fecha_creacion timestamp [default: `now()`, not null]
  fecha_actualizacion timestamp [not null]
  fecha_eliminacion timestamp
}

// ============ RELACIONES (FOREIGN KEYS) ============

Ref: usuario_roles.usuario_id > usuarios.id [delete: cascade, update: cascade]
Ref: usuario_roles.rol_id > roles.id [delete: cascade, update: cascade]

Ref: rol_permisos.rol_id > roles.id [delete: cascade, update: cascade]
Ref: rol_permisos.permiso_id > permisos.id [delete: cascade, update: cascade]

Ref: sucursales.cliente_id > clientes.id [delete: restrict, update: cascade]
Ref: sucursales.zona_id > zonas.id [delete: restrict, update: cascade]

Ref: vehiculos.zona_id > zonas.id [delete: set null, update: cascade]

Ref: historial_precios.material_id > materiales.id [delete: restrict, update: cascade]

Ref: empleados.zona_id > zonas.id [delete: set null, update: cascade]
Ref: empleados.usuario_id > usuarios.id [delete: set null, update: cascade]
